# bitcoincash-verifyscript-clib

./: .gitignore  CMakeLists.txt  README.md  example.py
src/: CMakeLists.txt  amount.h  export.cpp
src/config/: CMakeLists.txt
src/secp256k1/: CMakeLists.txt
